# rust-beyond-basics

./: .gitignore  Cargo.toml  LICENSE  README.md
actix-web-example/: .env  Cargo.toml  README.md  docker-compose.yml  init.sql
actix-web-example/src/: main.rs  offer.rs  product.rs
any-example/: Cargo.toml
any-example/src/: main.rs
asm-example/src/: main.rs  optimized.rs
async-std-example/: Cargo.toml
async-std-example/src/: main.rs
const-function/: Cargo.toml
const-function/src/: main.rs
criterion-example/: Cargo.toml  README.md  run_benchmark.sh
criterion-example/benches/: my_benchmark.rs
criterion-example/src/: main.rs
eframe_template/: Cargo.toml
embedded-example/: Cargo.toml  README.md
embedded-example/.cargo/: config.toml
embedded-example/examples/: allocator.rs
ffi-library/: Cargo.toml  build.sh  call_rust  call_rust.c  run.sh
ffi-library/src/: lib.rs
flamegraph-example/: Cargo.toml  README.md  perf.data
flamegraph-example/src/: main.rs
generic-example/: Cargo.toml
generic-example/src/: main.rs
ini_parser/: Cargo.toml
ini_parser/src/: main.rs
iter-example/: Cargo.toml
iter-example/src/: main.rs
kernel-example/: README.md
lifetime-example/: Cargo.toml
lifetime-example/src/: main.rs
mimalloc-example/: Cargo.toml
mimalloc-example/src/: main.rs
multiprocessing-example/: Cargo.toml
multiprocessing-example/src/: main.rs
pin-example/: Cargo.toml
pin-example/src/: main.rs
rc-example/: Cargo.toml
rc-example/src/: main.rs
rocket-example/: Cargo.toml  README.md
rocket-example/src/: main.rs
simd-example/: Cargo.toml
simd-example/src/: main.rs
task-actix-web/: README.md
task-lorem-ipsum-device/: Readme.md
task-tokio/: README.md  rses
test-example/: Cargo.toml
test-example/src/: main.rs
todo-task/: Todo-Task  import.csv
tokio-example/: Cargo.toml  README.md
tokio-example/src/: main.rs
trait-example/: Cargo.toml
trait-example/src/: main.rs
wasm-example/: Cargo.toml  README.md  inc.wasm  index.html  main.js
