[package]
name = "actix-web-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
diesel = { version="2.0.4", features=["numeric", "chrono", "serde_json", "postgres_backend"]} # no backend features need to be enabled
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
once_cell = "1"
serde = { version = "1.0", features = ["rc","derive"] }
serde_json = "1"
rand = "0.8.5"