[package]
name = "criterion-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.17.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# required for criterion
[[bench]]
name = "my_benchmark"
harness = false