[package]
name = "multiprocessing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = {version = "1.2", features = ["tokio"]}
tokio = {version = "1", features = ["full"]}
kanal = "0.1.0-pre8"
serde = "1"
tokio-stream = "0.1.14"
num_cpus = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
lazy_static = "1.4"
futures = "0.3"